[gd_scene load_steps=3 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://StressWorries.gd" type="Script" id=2]

[node name="StressWorries" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 352.0
margin_bottom = 77.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 75.0
margin_bottom = 100.0
rect_min_size = Vector2( 330, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StressTitle" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 333.0
margin_bottom = 14.0
text = "Stress"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 333.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 25 )

[node name="WorriesQ1" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 47.0
margin_right = 333.0
margin_bottom = 61.0
text = "You are afraid for the future."

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 65.0
margin_right = 333.0
margin_bottom = 81.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider_W1" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 85.0
margin_right = 333.0
margin_bottom = 116.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="WorriesQ2" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 120.0
margin_right = 333.0
margin_bottom = 134.0
text = "You have many worries."

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 138.0
margin_right = 333.0
margin_bottom = 154.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider_W2" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 158.0
margin_right = 333.0
margin_bottom = 189.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="WorriesQ3" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 193.0
margin_right = 333.0
margin_bottom = 207.0
text = "Your problems seem to be piling up."

[node name="HBoxContainer5" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 211.0
margin_right = 333.0
margin_bottom = 227.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider_W3" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer6" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 231.0
margin_right = 333.0
margin_bottom = 262.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="WorriesQ4" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 266.0
margin_right = 333.0
margin_bottom = 280.0
text = "You fear you may not manage to attain your goals."

[node name="HBoxContainer7" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 284.0
margin_right = 333.0
margin_bottom = 300.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider_W4" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer8" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 304.0
margin_right = 333.0
margin_bottom = 335.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="WorriesQ5" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 339.0
margin_right = 333.0
margin_bottom = 353.0
text = "You feel frustrated."

[node name="HBoxContainer9" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 357.0
margin_right = 333.0
margin_bottom = 373.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider_W5" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer10" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 377.0
margin_right = 333.0
margin_bottom = 408.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="HBoxContainer11" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 412.0
margin_right = 333.0
margin_bottom = 432.0
alignment = 1

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 119.0
margin_right = 161.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 167, -332.5 )
text = "Next"

[node name="MenuButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 165.0
margin_right = 213.0
margin_bottom = 20.0
text = "Menu"
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer/HSlider_W1" to="." method="_on_HSlider_W1_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer3/HSlider_W2" to="." method="_on_HSlider_W2_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer5/HSlider_W3" to="." method="_on_HSlider_W3_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer7/HSlider_W4" to="." method="_on_HSlider_W4_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer9/HSlider_W5" to="." method="_on_HSlider_W5_value_changed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/HBoxContainer11/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer11/MenuButton" to="." method="_on_MenuButton_pressed"]
